# semantic-search-framework

./: .env.example  .gitignore  LICENSE  README.md  docker-compose-local.yaml  pyproject.toml
data_set/kr/: naver_qna.json
naver_kin/: scrapy.cfg
naver_kin/data/kinspider/: kinspider_2023-08-03T11-31-44.jsonl  kinspider_2023-08-03T11-32-13.jsonl
naver_kin/naver_kin/: items.py  middlewares.py  pipelines.py  settings.py
naver_kin/naver_kin/spiders/: quotes_naver_kin.py
src/: main.py
src/crawler/: CrawlerInterface.py  SourceData.py
src/crawler/naver/: LocalNaverJsonParser.py
src/embedd/: EmbeddedModel.py  EmbeddingInteface.py
src/embedd/openai/: OpenAIClient.py
src/storage/: QueryResultModel.py  StorageInterface.py
src/storage/qdrant/: QdrantClient.py
src/storage/zzzz/: QdrantClient.py
